--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -55,6 +55,7 @@
   "answers": "Odpovědi",
   "application": "Aplikace",
   "arbitrary_message": "Libovolná zpráva",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Poptat objendávku",
   "ask_order_cancellation": "Požádat o zrušení objednávky",
   "ask_order_id": "Dotaz na ID objednávky",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Chcete si vybrat vlastní heslo? Klikněte sem.",
   "clear_results": "Smazat výsledky",
   "clear_search_results": "Vymazat Výsledky Hledání",
+  "click_for_changes": "Klikněte sem a uvidíte, co se změnilo",
   "click_here_for_help": "Chcete-li se o tom dozvědět více, klikněte zde",
   "click_here_to_enable": "Klikněte na tlačítko povolit obsah.",
   "click_to_claim": "Klikněte zde pro uplatnění nároku zdarma.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopírovat odkaz na aktivum",
   "copy_send_burst_link": "Kopírovat odkaz \"Poslat burst\"",
   "copy_send_message_link": "Kopírovat odkaz \"Poslat zprávu\"",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvořit anketu",
   "create_your_account": "Vytvořit účet",
   "current_price": "Aktuální cena",
   "current_quantity": "Aktuální množství",
+  "current_version": "Současná verze",
   "dashboard": "Přehled",
   "data": "Údaje",
   "data_is_encrypted": "Data jsou šifrována.",
@@ -202,11 +206,14 @@
   "discount": "Sleva",
   "do_not_broadcast": "Nevysílat",
   "do_not_delete": "Ne, nemazat",
-  "download_brs": "Download BRS",
+  "domain": "Doména",
+  "download": "Stažení",
+  "download_started": "Stahování bylo zahájeno",
   "downloaded": " Staženo",
   "downloaded_hash": "Stažený Hash",
   "downloaded_volume": "Stažená data",
   "downloading_blockchain": "Stahuji blockchain",
+  "downloading_update": "Probíhá stahování aktualizace. Jakmile budete hotovi, budete informováni.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Upravit",
   "effective_balance": "Efektivní zůstatek",
@@ -454,6 +461,7 @@
   "generation_signature": "Generování podpisu",
   "generator": "Generátor",
   "generator_public_key": "Generátor veřejného klíče",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnout zpětnou vazbu",
   "give_feedback_q": "Poskytnout zpětnou vazbu?",
   "goods": "Zboží",
@@ -486,6 +494,7 @@
   "is_scanning": "Skenování",
   "issue_asset": "Issue Asset",
   "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issuer": "Emitent",
   "item_name": "Název položky",
   "language": "Jazyk",
   "last_block": "Poslední blok",
@@ -554,6 +563,10 @@
   "new_price": "Nová cena",
   "new_q_create_account": "Jste zde poprvé? Vytvořte si svůj účet!",
   "new_quantity": "Nové množství",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nová verze",
   "newest_products": "Nejnovější produkty",
   "news": "Novinky",
   "news_section_disabled": "Sekce Novinky je momentálně nedostupná.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Nebyly nalezeny žádné transakce",
   "no_transactions_in_block": "Žádné transakce v tomto bloku.",
   "no_transactions_yet": "Doposud žádné transakce.",
+  "non_verified_source": "Neznámý, potenciálně nezabezpečený zdroj",
   "none": "Žádný",
   "not_delivered_in_time": "Není doručena včas",
   "not_forging": "Kování vypnuto",
@@ -620,6 +634,7 @@
   "open_orders": "Otevřené objednávky",
   "option_x": "možnost __x__",
   "options_are_binary": "Možnosti jsou binární",
+  "or": "or",
   "order": "Objednávka",
   "order_date": "Datum objednávky",
   "order_description": "Popis objednávky",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "Veřejný klíč tohoto účtu je již oznámen. Použijte místo toho ID účtu.",
   "recipient_unknown": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Prosím zkontrolujte adresu příjemce před odesláním.",
   "recipient_unknown_pka": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Můžete zvýšit zabezpečení tím, že poskytnete veřejný klíč příjemce.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
   "refund": "Náhrada výdajů",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Nepotvrzená transakce",
   "unconfirmed_transactions": "Nepotvrzené transakce",
   "unknown": "Neznámý",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Unsigned Transaction Bytes",
   "up_to_date_peers": "Aktuální peeři",
   "update": "Aktualizovat",
   "update_account_info": "Aktualizovat informace o účtu",
   "update_alias": "Aktualizovat alias",
-  "update_available": "K dispozici je nová verze BRS. Je doporučena jeho aktualizace.",
+  "update_available": "Nová aktualizace k dispozici",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "Blockchain se stále stahuje. Zkontrolujte jej prosím znovu, až bude aktuální.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Aktualizovat kontakt",
   "update_multiple_available": "K dispozici je jak hlavní tak experimentální verze. Není doporučeno instalovat experimentální verzi, pokud nevíte, co děláte.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Tento uživatel nemá žádná aktiva.",
   "user_no_transactions": "Tento uživatel nemá žádné transakce.",
   "valid": "Platné",
+  "valid_thru": "Platné přes",
   "validate": "Validate",
   "validate_token": "Ověřit Token",
   "value_in_burst": "Hodnota v burst",
+  "verified_source": "Ověřený a bezpečný zdroj",
+  "verify": "Verify",
   "version": "Verze",
   "view_more": "Zobrazit více",
   "view_owner_info_q": "View owner info?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Nabízíte tento alias na prodej.",
   "your_name": "Vaše jméno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
