--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -55,6 +55,7 @@
   "answers": "Respuestas",
   "application": "Aplicación",
   "arbitrary_message": "Mensaje Arbitrario",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Orden de Venta",
   "ask_order_cancellation": "Cancelar Orden de Venta",
   "ask_order_id": "ID de Orden de Venta",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "¿Prefiere elegir su propia contraseña? Haga clic aquí.",
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
+  "click_for_changes": "Haga clic aquí para ver qué ha cambiado.",
   "click_here_for_help": "Haga clic aquí para saber más sobre esto.",
   "click_here_to_enable": "Haga clic aquí para activarlo.",
   "click_to_claim": "Haga clic aquí para reclamar su ráfaga libre.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copiar Enlace del Activo",
   "copy_send_burst_link": "Copiar el Enlace 'Enviar BURST'",
   "copy_send_message_link": "Copiar el enlace 'Enviar Mensaje'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Encuesta",
   "create_your_account": "Crear Su Cuenta",
   "current_price": "Precio Actual",
   "current_quantity": "Cantidad Actual",
+  "current_version": "Versión actual",
   "dashboard": "Panel de control",
   "data": "Datos",
   "data_is_encrypted": "Los datos están cifrados.",
@@ -202,11 +206,14 @@
   "discount": "Descuento",
   "do_not_broadcast": "No Transmitir",
   "do_not_delete": "No, No Borrar",
-  "download_brs": "Descargar BRS",
+  "domain": "Dominio",
+  "download": "Descargar",
+  "download_started": "Descarga iniciada",
   "downloaded": "Descargado",
   "downloaded_hash": "Hash Descargado",
   "downloaded_volume": "Volumen Descargado",
   "downloading_blockchain": "Descargando Cadena de Bloques",
+  "downloading_update": "La actualización se está descargando. Estarás informado una vez que haya terminado.",
   "drop_update": "Arrastre la actualización del cliente (el archivo zip) aquí o haga clic para seleccionar.",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
@@ -454,6 +461,7 @@
   "generation_signature": "Firma de Generación",
   "generator": "Generador",
   "generator_public_key": "Clave Pública del Generador",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Dejar Valoración",
   "give_feedback_q": "¿Dejar comentario?",
   "goods": "Mercancías",
@@ -486,6 +494,7 @@
   "is_scanning": "Está Escaneando",
   "issue_asset": "Emitir Activo",
   "issue_asset_warning": "Aviso: Una vez enviada, nunca podrá cambiar esta información. Asegúrese de que es correcta.",
+  "issuer": "Editor",
   "item_name": "Nombre de Artículo",
   "language": "Idioma",
   "last_block": "Último Bloque",
@@ -554,6 +563,10 @@
   "new_price": "Nuevo Precio",
   "new_q_create_account": "¿Nuevo? ¡Cree su cuenta!",
   "new_quantity": "Nueva Cantidad",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nueva versión",
   "newest_products": "Artículos Más Recientes",
   "news": "Noticias",
   "news_section_disabled": "La sección de noticias está deshabilitada.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "No se han encontrado transacciones",
   "no_transactions_in_block": "Ninguna transacción en este bloque.",
   "no_transactions_yet": "Aún no hay transacciones.",
+  "non_verified_source": "Desconocida, fuente potencialmente insegura.",
   "none": "Ninguno",
   "not_delivered_in_time": "No entregado a tiempo",
   "not_forging": "Sin Forjar",
@@ -620,6 +634,7 @@
   "open_orders": "Órdenes Pendientes",
   "option_x": "opción __x__",
   "options_are_binary": "Las Opciones son Binarias",
+  "or": "or",
   "order": "Orden",
   "order_date": "Fecha de la Orden",
   "order_description": "Descripción de la Orden",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "La clave pública de esta cuenta ya ha sido declarada. Utilice la ID de cuenta en su lugar.",
   "recipient_unknown": "La cuenta de destino es desconocida, lo que significa que nunca ha recibido o emitido ninguna transacción. Por favor confirme la cuenta de destino antes de enviar.",
   "recipient_unknown_pka": "La cuenta de destino es una cuenta desconocida, lo que significa que nunca he recibido o enviado ninguna transacción. Para hacer este envío, debe suministrar también la clave pública de la cuenta de destino.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash Completo de la Transacción de Referencia",
   "referenced_transaction_hash": "Hash de la Transacción de Referencia",
   "refund": "Reembolso",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Transacción Sin Confirmar",
   "unconfirmed_transactions": "Transacciones Sin Confirmar",
   "unknown": "Desconocido",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes de Transacción Sin Firmar",
   "up_to_date_peers": "Pares Actualizados",
   "update": "Actualizar",
   "update_account_info": "Actualizar Información de Cuenta",
   "update_alias": "Actualizar Alias",
-  "update_available": "Una nueva versión de BRS está disponible. Se recomienda que actualice.",
+  "update_available": "Nueva actualización disponible",
   "update_beta_available": "Está disponible una nueva versión experimental. No se recomienda instalarla si no sabe bien lo que está haciendo.",
   "update_blockchain_downloading": "La cadena de bloques aún se está descargando, vuelva a probar cuando esté actualizada.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Actualizar Contacto",
   "update_multiple_available": "Hay una versión general y una experimental disponibles. No se recomienda que instale la versión experimental a menos que sepa lo que está haciendo.",
   "update_testnet": "BRS no puede ser actualizado durante una conexión a la red de pruebas.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Este usuario no tiene activos.",
   "user_no_transactions": "Este usuario no tiene ninguna transacción.",
   "valid": "Válido",
+  "valid_thru": "Válido hasta",
   "validate": "Validar",
   "validate_token": "Validar Identificador",
   "value_in_burst": "Valor en BURST",
+  "verified_source": "Fuente verificada y segura",
+  "verify": "Verify",
   "version": "Versión",
   "view_more": "Ver Más",
   "view_owner_info_q": "¿Ver información de propietario?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Ha puesto este alias a la venta.",
   "your_name": "Su Nombre",
   "your_passphrase": "Su Contraseña",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
