--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -55,6 +55,7 @@
   "answers": "Risposte",
   "application": "Applicazione",
   "arbitrary_message": "Messaggio arbitrario",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordine di vendita",
   "ask_order_cancellation": "Cancellazione ordine di vendita",
   "ask_order_id": "ID ordine di vendita",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Vuoi scegliere la propria passphrase? Clicca qui.",
   "clear_results": "Clear Results",
   "clear_search_results": "Rimuovi risultati di ricerca",
+  "click_for_changes": "Clicca qui per vedere cosa è cambiato",
   "click_here_for_help": "Clicca qui per saperne di più",
   "click_here_to_enable": "Clicca qui per attivarlo.",
   "click_to_claim": "Clicca qui per richiedere il tuo Burst gratuito.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copia il link dell'Asset",
   "copy_send_burst_link": "Copia il Link 'Invia BURST'",
   "copy_send_message_link": "Copiare il link 'Invia messaggio'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Crea sondaggio",
   "create_your_account": "Crea il tuo Account",
   "current_price": "Prezzo attuale",
   "current_quantity": "Quantità attuale",
+  "current_version": "Versione corrente",
   "dashboard": "Pannello di controllo",
   "data": "Dati",
   "data_is_encrypted": "Data is encrypted.",
@@ -202,11 +206,14 @@
   "discount": "Sconto",
   "do_not_broadcast": "Non trasmettere",
   "do_not_delete": "No, non eliminare",
-  "download_brs": "Scarica BRS",
+  "domain": "Dominio",
+  "download": "Scaricare",
+  "download_started": "Download avviato",
   "downloaded": "Scaricato",
   "downloaded_hash": "Hash scaricato",
   "downloaded_volume": "Volume scaricato",
   "downloading_blockchain": "Download Blockchain",
+  "downloading_update": "L'aggiornamento è in fase di download. Sarai informato una volta finito.",
   "drop_update": "Quando scaricato, trascina qui l'aggiornamento del client (file zip) o clicca per selezionare.",
   "edit": "Modifica",
   "effective_balance": "Saldo effettivo",
@@ -454,6 +461,7 @@
   "generation_signature": "Firma di generazione",
   "generator": "Generatore",
   "generator_public_key": "Generatore della Chiave Pubblica",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Lascia un Feedback",
   "give_feedback_q": "Vuoi lasciare una recensione?",
   "goods": "Articoli",
@@ -486,6 +494,7 @@
   "is_scanning": "E' in scansione",
   "issue_asset": "Rilascia Asset",
   "issue_asset_warning": "Attenzione: Una volta inviata, non sarai mai più in grado di modificare queste informazioni. Assicurati che siano giuste.",
+  "issuer": "Emittente",
   "item_name": "Nome articolo",
   "language": "Lingua",
   "last_block": "Ultimo blocco",
@@ -554,6 +563,10 @@
   "new_price": "Nuovo prezzo",
   "new_q_create_account": "Nuovo? Crea il tuo Account!",
   "new_quantity": "Nuova quantità",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nuova versione",
   "newest_products": "Prodotti più recenti",
   "news": "News",
   "news_section_disabled": "La sezione news è attualmente disattivata.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Nessuna transazione trovata",
   "no_transactions_in_block": "Nessuna transazione in questo blocco.",
   "no_transactions_yet": "Ancora nessuna transazione.",
+  "non_verified_source": "Fonte sconosciuta, potenzialmente insicura",
   "none": "None",
   "not_delivered_in_time": "Non consegnato in tempo",
   "not_forging": "Forgiatura arrestata",
@@ -620,6 +634,7 @@
   "open_orders": "Ordini aperti",
   "option_x": "opzione __x__",
   "options_are_binary": "Le opzioni sono binarie",
+  "or": "or",
   "order": "Ordine",
   "order_date": "Data ordine",
   "order_description": "Descrizione dell'ordine",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "L'account del destinatario è un account sconosciuto, significa che non ha mai avuto una transazione in entrata o in uscita. Si prega di ricontrollare l'indirizzo del destinatario prima dell'invio.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash completo della transazione di riferimento",
   "referenced_transaction_hash": "Hash della transazione indicata",
   "refund": "Rimborso",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Transazione non confermata",
   "unconfirmed_transactions": "Transazioni non confermate",
   "unknown": "Sconosciuto",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Byte di transazione senza firma",
   "up_to_date_peers": "Peer aggiornati",
   "update": "Aggiornamento",
   "update_account_info": "Aggiorna Info Account",
   "update_alias": "Aggiorna Alias",
-  "update_available": "È disponibile una nuova versione di BRS. È consigliabile aggiornare.",
+  "update_available": "Nuovo aggiornamento disponibile",
   "update_beta_available": "È disponibile una nuova versione sperimentale. Non è consigliabile installarla se non sai cosa stai facendo.",
   "update_blockchain_downloading": "Il blockchain sta ancora scaricando, controllare nuovamente appena sarà aggiornato.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Aggiorna contatto",
   "update_multiple_available": "Sia un rilascio generale che uno sperimentale sono disponibili. Non è consigliabile installare il rilascio sperimentale se non si è certi di cosa si stia facendo.",
   "update_testnet": "L'BRS non può essere aggiornato quando è collegato alla testnet.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Questo utente non ha alcun asset.",
   "user_no_transactions": "Questo utente non ha alcuna transazione.",
   "valid": "Valido",
+  "valid_thru": "Valido attraverso",
   "validate": "Valida",
   "validate_token": "Convalida Token",
   "value_in_burst": "Valore in BURST",
+  "verified_source": "Fonte verificata e sicura",
+  "verify": "Verify",
   "version": "Versione",
   "view_more": "Vedi di più",
   "view_owner_info_q": "Mostra informazioni del proprietario?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Stai per mettere in vendita questo alias.",
   "your_name": "Il tuo nome",
   "your_passphrase": "La tua Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
