--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -55,6 +55,7 @@
   "answers": "Atsakymai",
   "application": "Aplikacija",
   "arbitrary_message": "Žinutė",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Pardavimo užsakymas",
   "ask_order_cancellation": "Pardavimo užsakymo panaikinimas",
   "ask_order_id": "Pardavimo kainos užsakymo ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Norite pasirinkti savo slaptažodį? Spauskite čia.",
   "clear_results": "Išvalyti rezultatus",
   "clear_search_results": "Išvalyti paieškos rezultatus",
+  "click_for_changes": "Spauskite čia norėdami pamatyti, kas pasikeitė",
   "click_here_for_help": "Spauskite čia norėdami sužinoti daugiau apie tai",
   "click_here_to_enable": "Spauskite čia tam, kad įgalinti.",
   "click_to_claim": "Spauskite čia norėdami pareikšti savo nemokamą sprogimą.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopijuoti aktyvo nuorodą",
   "copy_send_burst_link": "Nukopijuokite nuorodą \"Siųsti BURST",
   "copy_send_message_link": "Nukopijuokite nuorodą \"Siųsti pranešimą",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Sukurti apklausą",
   "create_your_account": "Sukurkite savo sąskaitą",
   "current_price": "Dabartinė kaina",
   "current_quantity": "Einamasis kiekis",
+  "current_version": "Dabartinė versija",
   "dashboard": "Skydelis",
   "data": "Duomenys",
   "data_is_encrypted": "Duomenys šifruoti.",
@@ -202,11 +206,14 @@
   "discount": "Nuolaida",
   "do_not_broadcast": "Netransliuoti",
   "do_not_delete": "Ne, nenaikinti",
-  "download_brs": "Parsisiųsti BRS",
+  "domain": "Domenas",
+  "download": "parsisiųsti",
+  "download_started": "Atsisiuntimas prasidėjo",
   "downloaded": "Atsisiųsta",
   "downloaded_hash": "Atsisiųstas \"hash",
   "downloaded_volume": "Atsisiųstų duomenų apimtis",
   "downloading_blockchain": "Atsisiunčiami blokai",
+  "downloading_update": "Atnaujinimas atnaujinamas. Jums bus pranešta, kai jis bus baigtas.",
   "drop_update": "Užveskite kliento atnaujinimo failą (zip failas) čia, kai atsisiųsite arba spustelėkite, kad pažymėtumėte.",
   "edit": "Redaguoti",
   "effective_balance": "Efektyvus balansas",
@@ -454,6 +461,7 @@
   "generation_signature": "Generation Signature",
   "generator": "Generatorius",
   "generator_public_key": "Viešojo rakto generatorius",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Pateikti atsiliepimus",
   "give_feedback_q": "Pateikti atsiliepimus?",
   "goods": "Prekės",
@@ -486,6 +494,7 @@
   "is_scanning": "Vyksta skenavimas",
   "issue_asset": "Išleisti aktyvą",
   "issue_asset_warning": "Įspėjimas: perdavus, Jūs negalėsite pakeisti šios informacijos dar kartą. Įsitikinkite, kad ji yra teisinga.",
+  "issuer": "Emitentas",
   "item_name": "Prekės pavadinimas",
   "language": "Kalba",
   "last_block": "Paskutinis blokas",
@@ -554,6 +563,10 @@
   "new_price": "Nauja kaina",
   "new_q_create_account": "Esate naujas vartotojas? Sukurkite savo sąskaitą!",
   "new_quantity": "Naujas kiekis",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nauja versija",
   "newest_products": "Naujausi produktai",
   "news": "Naujienos",
   "news_section_disabled": "Naujienų skyrius šiuo metu yra išjungtas.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Transakcijų nerasta",
   "no_transactions_in_block": "Nėra transakcijų šiame bloke.",
   "no_transactions_yet": "Nėra jokių transakcijų dar.",
+  "non_verified_source": "Nežinomas, galbūt nesaugus šaltinis",
   "none": "Nėra",
   "not_delivered_in_time": "Nepristatyta laiku",
   "not_forging": "Kalimas\" nevyksta",
@@ -620,6 +634,7 @@
   "open_orders": "Atviri užsakymai",
   "option_x": "pasirinkimas __x__",
   "options_are_binary": "Yra galimos dvejos parinktys",
+  "or": "or",
   "order": "Užsakymas",
   "order_date": "Užsakymo data",
   "order_description": "Užsakymo aprašymas",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "Šios sąskaitos viešasis raktas jau paskelbtas. Naudokite sąskaitos ID.",
   "recipient_unknown": "Gavėjo sąskaita yra nežinomą sąskaita, tai reiškia, niekada neturėjo jokios transakcijos. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
   "recipient_unknown_pka": "Gavėjo sąskaita yra nežinoma, tai reiškia, ji niekada neturėjo įeinančios ar išeinančios transakcijos. Norint pateikti šį prašymą, turite taip pat pateikti gavėjo viešąjį raktą.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Nurodytos transakcijos pilnas \"hash",
   "referenced_transaction_hash": "Nurodytos transakcijos \"hash",
   "refund": "Pinigų grąžinimai",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Nepatvirtinta transakcija",
   "unconfirmed_transactions": "Nepatvirtintos transakcijos",
   "unknown": "Nežinomas",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Nepasirašytos transakcijos baitai",
   "up_to_date_peers": "Naujausi \"peer'ai",
   "update": "Atnaujinimas",
   "update_account_info": "Atnaujinti sąskaitos informaciją",
   "update_alias": "Atnaujinti pseudonimą",
-  "update_available": "Nauja BRS versija yra prieinama. Rekomenduojama atnaujinti.",
+  "update_available": "Nauja naujina",
   "update_beta_available": "Yra nauja eksperimentinė versija. Tai nėra rekomenduojama įdiegti, jei žinote, ką darote.",
   "update_blockchain_downloading": "Blokai vis dar siunčiasi, patikrinkite dar kartą po to, kai jie atsinaujins.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Atnaujinti kontaktą",
   "update_multiple_available": "Yra tiek ir pagrindinė, tiek ir eksperimentinė versijos. Nerekomenduojame įdiegti eksperimentinės versijos, nebent jei žinote, ką darote.",
   "update_testnet": "BRS negalima atnaujinti, kol esate prisijungę prie testinio tinklo.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Šis vartotojas neturi aktyvų.",
   "user_no_transactions": "Šis vartotojas neturi atlikęs jokios transakcijos.",
   "valid": "Galiojantis",
+  "valid_thru": "Galioja per",
   "validate": "Patvirtinti",
   "validate_token": "Patvirtinti atpašinimo ženklą",
   "value_in_burst": "BURST vertė",
+  "verified_source": "Patvirtintas ir saugus šaltinis",
+  "verify": "Verify",
   "version": "Versija",
   "view_more": "Rodyti daugiau",
   "view_owner_info_q": "Rodyti savininko info?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Jūs siūlote ši pseudonimą pardavimui.",
   "your_name": "Jūsų vardas",
   "your_passphrase": "Jūsų slaptažodis",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
