--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -55,6 +55,7 @@
   "answers": "Antwoorden",
   "application": "Applicatie",
   "arbitrary_message": "Willekeurig Bericht",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Vraag bestelling",
   "ask_order_cancellation": "Ask bestelling annulering",
   "ask_order_id": "Ask Order ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Wilt u uw eigen wachtwoord aanmaken? Klik dan hier.",
   "clear_results": "Resultaten wissen",
   "clear_search_results": "Zoekresultaten wissen",
+  "click_for_changes": "Klik hier om te zien wat er is veranderd",
   "click_here_for_help": "Klik hier om er meer over te weten",
   "click_here_to_enable": "Klik hier om het in te schakelen.",
   "click_to_claim": "Klik hier om uw gratis Burst te claimen.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Link van het activa kopieren",
   "copy_send_burst_link": "'Stuur BURST' link kopieren",
   "copy_send_message_link": "Kopieer 'Stuur bericht' Link",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Peiling aanmaken",
   "create_your_account": "Maak uw account aan",
   "current_price": "Huidige Prijs",
   "current_quantity": "Huidige Hoeveelheid",
+  "current_version": "Huidige versie",
   "dashboard": "Dashboard",
   "data": "Gegevens",
   "data_is_encrypted": "Gegevens zijn versleuteld.",
@@ -202,11 +206,14 @@
   "discount": "Korting",
   "do_not_broadcast": "Uitzending uitzetten",
   "do_not_delete": "Nee, niet verwijderen",
-  "download_brs": "BRS downloaden",
+  "domain": "Domein",
+  "download": "Download",
+  "download_started": "Downloaden is gestart",
   "downloaded": "Gedownload",
   "downloaded_hash": "Gedownloade Hash",
   "downloaded_volume": "Gedownload Volume",
   "downloading_blockchain": "Blockchain aan het downloaden",
+  "downloading_update": "De update wordt gedownload. Je wordt op de hoogte gesteld zodra het is afgelopen.",
   "drop_update": "Plaats de client update (zip-bestand) hier wanneer het gedownload is of klik om te selecteren.",
   "edit": "Bewerken",
   "effective_balance": "Effectieve saldo",
@@ -454,6 +461,7 @@
   "generation_signature": "Genereer Handtekening",
   "generator": "Generator",
   "generator_public_key": "Openbare sleutel van de generator",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Geef Feedback",
   "give_feedback_q": "Feedback geven?",
   "goods": "Goederen",
@@ -486,6 +494,7 @@
   "is_scanning": "Bezig met scannen",
   "issue_asset": "Asset uitgeven",
   "issue_asset_warning": "Waarschuwing: Na verzending kunt u deze informatie nooit meer wijzigen. Controleer daarom goed of alles correct is.",
+  "issuer": "Issuer",
   "item_name": "Productnaam",
   "language": "Taal",
   "last_block": "Laatste Blok",
@@ -554,6 +563,10 @@
   "new_price": "Nieuwe prijs",
   "new_q_create_account": "Nieuw? Maak uw Account aan!",
   "new_quantity": "Nieuwe Hoeveelheid",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nieuwe versie",
   "newest_products": "Nieuwe Producten",
   "news": "Nieuws",
   "news_section_disabled": "De nieuwssectie is momenteel uitgeschakeld.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Geen transacties gevonden",
   "no_transactions_in_block": "Er zijn geen transacties in dit blok.",
   "no_transactions_yet": "Nog geen transacties.",
+  "non_verified_source": "Onbekende, potentieel onveilige bron",
   "none": "Geen",
   "not_delivered_in_time": "Niet op tijd geleverd",
   "not_forging": "Niet aan het smeden",
@@ -620,6 +634,7 @@
   "open_orders": "Openstaande orders",
   "option_x": "optie __x__",
   "options_are_binary": "Opties zijn binaire getallen",
+  "or": "or",
   "order": "Bestelling",
   "order_date": "Besteldatum",
   "order_description": "Order beschrijving",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "De public key van dit account is al bekend. Gebruik in plaats daarvan de account-ID.",
   "recipient_unknown": "De ontvangende rekening is onbekend, wat betekent dat het nooit een inkomende of uitgaande transactie heeft gehad. Controleer het ontvangst adres.",
   "recipient_unknown_pka": "Het ontvangende account is een onbekend account, wat betekent dat het nooit een inkomende of uitgaande transactie heeft gehad. Om deze actie te doen slagen, moet ook de openbare sleutel van de ontvanger worden opgeven.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Verwijzende Transactie Hash",
   "refund": "Terugbetalen",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Onbevestigde Transactie",
   "unconfirmed_transactions": "Onbevestigde transacties",
   "unknown": "Onbekend",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Niet-ondertekende Transactie Bytes",
   "up_to_date_peers": "Actuele peers",
   "update": "Update",
   "update_account_info": "Rekening gegevens bijwerken",
   "update_alias": "Update Alias",
-  "update_available": "Er is een nieuwe versie van BRS beschikbaar. Het is aanbevolen dat u een update doet.",
+  "update_available": "Nieuwe update beschikbaar",
   "update_beta_available": "Een nieuwe experimentele versie is nu beschikbaar.  Het is niet aanbevolen dat u dit gaat installeren, tenzij u weet precies wat u doet.",
   "update_blockchain_downloading": "De blockchain is nog steeds het downloaden, controleer opnieuw nadat het up-to-date is.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Contactpersoon Bijwerken",
   "update_multiple_available": "Zowel een algemene en experimentele release zijn beschikbaar. Het is niet aanbevolen dat u de experimentele gebruikt als u niet weet wat u doet.",
   "update_testnet": "BRS kan niet worden geupdate terwijl het verbonden is met de testnet.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Deze gebruiker heeft geen Assets.",
   "user_no_transactions": "Deze gebruiker heeft geen transacties.",
   "valid": "Geldig",
+  "valid_thru": "Geldig door",
   "validate": "Valideer",
   "validate_token": "Token Valideren",
   "value_in_burst": "Waarde in BURST",
+  "verified_source": "Geverifieerde en beveiligde bron",
+  "verify": "Verify",
   "version": "Versie",
   "view_more": "Bekijk Meer",
   "view_owner_info_q": "Gegevens van de eigenaar weergeven?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "U biedt deze alias te koop aan.",
   "your_name": "Uw naam",
   "your_passphrase": "Uw wachtwoord/passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
