--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -55,6 +55,7 @@
   "answers": "Odpowiedzi",
   "application": "Aplikacja",
   "arbitrary_message": "Arbitralna wiadomość",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Zlecenie sprzedaży",
   "ask_order_cancellation": "Anuluj zlecenie sprzedaży",
   "ask_order_id": "ID zlecenia sprzedaży",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Chcesz wprowadzić swoje hasło? Naciśnij tutaj.",
   "clear_results": "Wyczyść wyniki",
   "clear_search_results": "Wyczyść wyniki wyszukiwania",
+  "click_for_changes": "Kliknij tutaj, aby zobaczyć, co się zmieniło",
   "click_here_for_help": "Kliknij tutaj, aby dowiedzieć się więcej na ten temat",
   "click_here_to_enable": "Kliknij tutaj, aby włączyć.",
   "click_to_claim": "Kliknij tutaj, aby odebrać darmowy Burst.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopiuj linka do aktywa",
   "copy_send_burst_link": "Kopiuj link 'Wyślij BURST'",
   "copy_send_message_link": "Kopiuj link 'Wyślij Wiadomość'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Utwórz ankietę",
   "create_your_account": "Utwórz konto",
   "current_price": "Aktualna cena",
   "current_quantity": "Aktualna ilość",
+  "current_version": "Obecna wersja",
   "dashboard": "Dashboard",
   "data": "Dane",
   "data_is_encrypted": "Dane są szyfrowane.",
@@ -202,11 +206,14 @@
   "discount": "Zniżka",
   "do_not_broadcast": "Nie broadcastuj",
   "do_not_delete": "Nie, nie usuwaj",
-  "download_brs": "Pobierz BRS",
+  "domain": "Domena",
+  "download": "Ściągnij",
+  "download_started": "Rozpoczęto pobieranie",
   "downloaded": "Pobrany",
   "downloaded_hash": "Pobrany hash",
   "downloaded_volume": "Pobrany wolumen",
   "downloading_blockchain": "Pobieram blockchain",
+  "downloading_update": "Aktualizacja jest pobierana. Zostaniesz poinformowany po zakończeniu.",
   "drop_update": "Dodaj plik zip programu tutaj lub wybierz klikając.",
   "edit": "Edytuj",
   "effective_balance": "Efektywny balans",
@@ -454,6 +461,7 @@
   "generation_signature": "Generowanie sygnatury",
   "generator": "Generator",
   "generator_public_key": "Generator klucza publicznego",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Zostaw wiadomość zwrotną",
   "give_feedback_q": "Zostawić wiadomość zwrotną?",
   "goods": "Towary",
@@ -486,6 +494,7 @@
   "is_scanning": "W trakcie skanowania",
   "issue_asset": "Wystawianie aktywa",
   "issue_asset_warning": "Uwaga: Po wysłaniu dane nie będą mogły już być zmienione.",
+  "issuer": "Emitent",
   "item_name": "Nazwa pozycji",
   "language": "Język",
   "last_block": "Ostatni blok",
@@ -563,6 +572,10 @@
   "new_price": "Nowa cena",
   "new_q_create_account": "Nowy? Załóż konto!",
   "new_quantity": "Nowa ilość",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nowa wersja",
   "newest_products": "Najnowsze produkty",
   "news": "Nowości",
   "news_section_disabled": "Sekcja nowośći jest obecnie wyłączona.",
@@ -600,6 +613,7 @@
   "no_transactions_found": "Nie znaleziono transakcji",
   "no_transactions_in_block": "Blok nie zawiera transakcji.",
   "no_transactions_yet": "Nie ma jeszcze transakcji.",
+  "non_verified_source": "Nieznane, potencjalnie niebezpieczne źródło",
   "none": "Żaden",
   "not_delivered_in_time": "Nie dostarczone na czas",
   "not_forging": "Nie jest Forging",
@@ -629,6 +643,7 @@
   "open_orders": "Otwarte zlecenia",
   "option_x": "opcja __x__",
   "options_are_binary": "Opcje są binarne",
+  "or": "or",
   "order": "Zlecenie",
   "order_date": "Data zlecenia",
   "order_description": "Opis zlecenia",
@@ -704,6 +719,7 @@
   "recipient_public_key_already_announced": "Klucz publiczny tego konta już został ogłoszony. Użyj ID konta.",
   "recipient_unknown": "Konto odbiorcy jest nieznane czyli nie przeprowadzono z niego transakcji wychodzącej ani przychodzącej. Upewnij się że adres odbiorcy jest poprawny przed wysłaniem.",
   "recipient_unknown_pka": "Konto odbiorcy jest nieznane czyli nie przeprowadzono z niego transakcji wychodzącej ani przychodzącej.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Pełny Hash transakcji",
   "referenced_transaction_hash": "Hash transakcji",
   "refund": "Zwrot",
@@ -877,14 +893,17 @@
   "unconfirmed_transaction": "Niepotwierdzona transakcja",
   "unconfirmed_transactions": "Niepotwierdzone transakcje",
   "unknown": "Nieznany",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Niepotwierdzone bajty transakcji",
   "up_to_date_peers": "Aktualne peers",
   "update": "Uaktualnienie",
   "update_account_info": "Uaktualnij informacje o koncie",
   "update_alias": "Uaktualnij alias",
-  "update_available": "Dostępny jest nowy BRS. Rekomendowane jest uaktualnienie.",
+  "update_available": "Nowa aktualizacja dostępna",
   "update_beta_available": "Dostępna jest nowa eksperymentalna wersja oprogramowania. Nie rekomendowana jest instalacja chyba że wiesz co robisz.",
   "update_blockchain_downloading": "Blockchain jest jeszcze pobierane, sprawdź później gdy pobieranie się zakończy.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Uaktualnij kontakt",
   "update_multiple_available": "Dostępne są nowe wersje oprogramowania, eksperymentalna i normalna. Nie rekomendowana jest instalacja wersji eksperymentalnej chyba że wiesz co robisz.",
   "update_testnet": "BRS nie może być uaktualniony w trakcie podłączenia do TestNetu.",
@@ -898,9 +917,12 @@
   "user_no_assets": "Użytkownik nie ma aktywów.",
   "user_no_transactions": "Użytkownik nie ma żadnych transakcji.",
   "valid": "Ważny",
+  "valid_thru": "Ważny do",
   "validate": "Waliduj",
   "validate_token": "Waliduj token",
   "value_in_burst": "Wartość w BURST",
+  "verified_source": "Zweryfikowane i bezpieczne źródło",
+  "verify": "Verify",
   "version": "Wersja",
   "view_more": "Zobacz więcej",
   "view_owner_info_q": "Otworzyć informacje o właścicielu?",
@@ -927,17 +949,5 @@
   "your_alias_sale_offer": "Ten alias został przez Ciebie wystawiony na sprzedaż.",
   "your_name": "Twoje imię",
   "your_passphrase": "Twoje hasło",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
