--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -55,6 +55,7 @@
   "answers": "Ответы",
   "application": "Приложение",
   "arbitrary_message": "Произвольное сообщение",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Заявка на продажу",
   "ask_order_cancellation": "Отменить ордер на покупку",
   "ask_order_id": "ID ордера на покупку",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Хотите выбрать свой собственный пароль? Нажмите здесь.",
   "clear_results": "Очистить результаты",
   "clear_search_results": "Очистить результаты поиска",
+  "click_for_changes": "Нажмите здесь, чтобы увидеть, что изменилось",
   "click_here_for_help": "Нажмите здесь, чтобы узнать больше об этом",
   "click_here_to_enable": "Нажмите здесь, чтобы включить.",
   "click_to_claim": "Нажмите здесь, чтобы получить бесплатный взрыв.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Скопировать ссылку актива",
   "copy_send_burst_link": "Скопировать ссылку 'Отправить BURST'",
   "copy_send_message_link": "Скопировать ссылку «Отправить сообщение»",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Создать опрос",
   "create_your_account": "Создайте свой аккаунт",
   "current_price": "Текущая цена",
   "current_quantity": "Текущее количество",
+  "current_version": "Текущая версия",
   "dashboard": "Обзор",
   "data": "Данные",
   "data_is_encrypted": "Данные зашифрованы.",
@@ -202,11 +206,14 @@
   "discount": "Скидка",
   "do_not_broadcast": "Не транслировать",
   "do_not_delete": "Нет, не удалять",
-  "download_brs": "Скачать BRS",
+  "domain": "Домен",
+  "download": "Скачать",
+  "download_started": "Загрузка началась",
   "downloaded": "Загружено",
   "downloaded_hash": "Загруженный хэш",
   "downloaded_volume": "Загруженный Объем",
   "downloading_blockchain": "Загрузка блокчейн",
+  "downloading_update": "Обновление загружается. Вы будете проинформированы, как только это закончится.",
   "drop_update": "Перетащите сюда скачанный клиент (zip файл) или нажмите для выбора.",
   "edit": "Редактировать",
   "effective_balance": "Эффективный баланс",
@@ -454,6 +461,7 @@
   "generation_signature": "Создание подписи",
   "generator": "Генератор",
   "generator_public_key": "Генератор открытого ключа",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Омтавить отзыв",
   "give_feedback_q": "Оставить отзыв?",
   "goods": "Товары",
@@ -486,6 +494,7 @@
   "is_scanning": "Идет Сканирование",
   "issue_asset": "Выпустить Актив",
   "issue_asset_warning": "Предупреждение: После того как вы введете данные, вы не сможете изменить эту информацию снова. Убедитесь, что все данные введены правильно.",
+  "issuer": "эмитент",
   "item_name": "Название элемента",
   "language": "Язык",
   "last_block": "Последний Блок",
@@ -554,6 +563,10 @@
   "new_price": "Новая цена",
   "new_q_create_account": "Впервые? Создайте свой аккаунт!",
   "new_quantity": "Новое количество",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Новая версия",
   "newest_products": "Новейшие товары",
   "news": "Новости",
   "news_section_disabled": "Раздел Новости в настоящее время отключен.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Транзакции не найдены",
   "no_transactions_in_block": "В этом блоке нет транзакций.",
   "no_transactions_yet": "Еще нет транзакций.",
+  "non_verified_source": "Неизвестный, потенциально небезопасный источник",
   "none": "Не найдено.",
   "not_delivered_in_time": "Не доставлено вовремя",
   "not_forging": "Нет Форжинга",
@@ -620,6 +634,7 @@
   "open_orders": "Открытые ордера",
   "option_x": "вариант __x__",
   "options_are_binary": "Опцион является Цифровым",
+  "or": "or",
   "order": "Ордер",
   "order_date": "Дата ордера",
   "order_description": "Описание ордера",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "Публичный ключ этого счета уже анонсирован. Вместо этого пожалуйста используйте номер счета.",
   "recipient_unknown": "Счет получателя является неизвестным аккаунтом, что означает, что он никогда не имел входящих или исходящих транзакций. Пожалуйста, проверьте адрес получателя перед отправкой.",
   "recipient_unknown_pka": "Счет получателя неизвестен, это означает, что в нем нет ни входящих, ни исходящих транзакций. Для отправки этого запроса необходимо также указать публичный ключ получателя.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Полный хэш указанной транзакции",
   "referenced_transaction_hash": "Хэш Связанной Транзакции",
   "refund": "Возмещение",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Неподтвержденная транзакция",
   "unconfirmed_transactions": "Неподтвержденные транзакции",
   "unknown": "Неизвестно",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Неподписанные байты транзакции",
   "up_to_date_peers": "Актуальный список узлов",
   "update": "Обновление",
   "update_account_info": "Обновить сведения аккаунта",
   "update_alias": "Обновить псевдоним",
-  "update_available": "Доступна новая версия BRS. Рекомендуется обновиться.",
+  "update_available": "Доступно новое обновление",
   "update_beta_available": "Доступна новая эксперементальная версия. Не рекомендуется устанавливать, если вы не уверены.",
   "update_blockchain_downloading": "Blockchain еще загружается, проверьте еще раз после того, как он обновится.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Обновить контакт",
   "update_multiple_available": "Доступны как основной, так и экспериментальный выпуски. Не рекомендуется устанавливать экспериментальный выпуск, если вы не знаете, что вы делаете.",
   "update_testnet": "BRS нельзя обновить при подключении к тестовой сети.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Этот пользователь не имеет активов.",
   "user_no_transactions": "У этого пользователя нет транзакций.",
   "valid": "Допустимо",
+  "valid_thru": "Годен до",
   "validate": "Проверка",
   "validate_token": "Проверка токена",
   "value_in_burst": "Значение в BURST",
+  "verified_source": "Проверенный и безопасный источник",
+  "verify": "Verify",
   "version": "Версия",
   "view_more": "Посмотреть больше",
   "view_owner_info_q": "Просмотреть информацию о владельце ?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Вы предлагаете этот псевдоним для продажи.",
   "your_name": "Ваше имя",
   "your_passphrase": "Ваш пароль",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
