--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -55,6 +55,7 @@
   "answers": "Odpovede",
   "application": "Aplikácia",
   "arbitrary_message": "Ľubovoľná správa",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Predajný príkaz",
   "ask_order_cancellation": "Zrušenie predajného príkazu",
   "ask_order_id": "ID predajného príkazu",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Chcete si zvoliť svoje vlastné heslo? Kliknite sem.",
   "clear_results": "Vymazať výsledky",
   "clear_search_results": "Vymazať výsledky vyhľadávania",
+  "click_for_changes": "Kliknite sem a zistite, čo sa zmenilo",
   "click_here_for_help": "Kliknite tu a dozviete sa viac o ňom",
   "click_here_to_enable": "Kliknite sem pre aktiváciu.",
   "click_to_claim": "Kliknite tu, aby ste si uplatnili nárok na bezplatný burst.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopírovať odkaz majetku",
   "copy_send_burst_link": "Kopírovať odkaz \"Odoslať BURST",
   "copy_send_message_link": "Kopírovať odkaz \"Odoslať správu",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvoriť Hlasovanie",
   "create_your_account": "Vytvorenie účtu",
   "current_price": "Aktuálna cena",
   "current_quantity": "Aktuálne množstvo",
+  "current_version": "Aktuálna verzia",
   "dashboard": "Nástenka",
   "data": "Údaje",
   "data_is_encrypted": "Dáta sú šifrované.",
@@ -202,11 +206,14 @@
   "discount": "Zľava",
   "do_not_broadcast": "Nevysielaj",
   "do_not_delete": "Nie, neodstraňovať",
-  "download_brs": "Stiahnuť BRS",
+  "domain": "doména",
+  "download": "Stiahnuť ▼",
+  "download_started": "Spustenie preberania",
   "downloaded": "Stiahnuté",
   "downloaded_hash": "Stiahnutý Hash",
   "downloaded_volume": "Stiahnutý objem",
   "downloading_blockchain": "Blockchain sa sťahuje",
+  "downloading_update": "Aktualizácia sa práve preberá. Po dokončení budete informovaný.",
   "drop_update": "Po stiahnutí presuňte aktualizáciu klienta (zip súbor) sem, alebo kliknutím vyberte.",
   "edit": "Upraviť",
   "effective_balance": "Efektívny zostatok",
@@ -454,6 +461,7 @@
   "generation_signature": "Generovanie podpisu",
   "generator": "Generátor",
   "generator_public_key": "Generátor verejného kľúča",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnúť spätnú väzbu",
   "give_feedback_q": "Odoslať spätnú väzbu?",
   "goods": "Tovar",
@@ -486,6 +494,7 @@
   "is_scanning": "Prehľadávam",
   "issue_asset": "Vydať majetok",
   "issue_asset_warning": "Upozornenie: Po odoslaní už nebudete môcť nikdy zmeniť tieto informácie. Skontrolujte, či sú správne.",
+  "issuer": "emitent",
   "item_name": "Názov položky",
   "language": "Jazyk",
   "last_block": "Posledný blok",
@@ -554,6 +563,10 @@
   "new_price": "Nová cena",
   "new_q_create_account": "Ste nový? Vytvorte si účet!",
   "new_quantity": "Nové množstvo",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nová verzia",
   "newest_products": "Najnovšie produkty",
   "news": "Novinky",
   "news_section_disabled": "Sekcia Novinky je momentálne vypnutá.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Nenašla sa žiadna transakcia",
   "no_transactions_in_block": "Žiadne transakcie v tomto bloku.",
   "no_transactions_yet": "Zatiaľ žiadne transakcie.",
+  "non_verified_source": "Neznámy, potenciálne nezabezpečený zdroj",
   "none": "Žiadne",
   "not_delivered_in_time": "Nedoručené včas",
   "not_forging": "Nekuje",
@@ -620,6 +634,7 @@
   "open_orders": "Otvorené príkazy",
   "option_x": "možnosť __x__",
   "options_are_binary": "Možnosti sú binárne",
+  "or": "or",
   "order": "Objednávka",
   "order_date": "Dátum objednávky",
   "order_description": "Popis príkazu",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "Verejný kľúč tohto účtu už bol oznámený. Použite ID účtu.",
   "recipient_unknown": "Účet príjemcu je neznámy účet, znamená to, že ešte nikdy nevykonal prichádzajúcu alebo odchádzajúcu transakciu. Prosím skontrolujte dvakrát adresu vášho príjemcu pred odoslaním.",
   "recipient_unknown_pka": "Účet príjemcu je neznámy účet, to znamená že ešte nemal žiadnu prichádzajúcu alebo odchádzajúcu transakciu. Pri tomto odoslaní musíte zadať aj verejný kľúč príjemcu.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Kompletný hash odkazovanej transakcie",
   "referenced_transaction_hash": "Hash odkazovanej transakcie",
   "refund": "Vrátiť",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Nepotvrdená transakcia",
   "unconfirmed_transactions": "Nepotvrdené transakcie",
   "unknown": "Neznáme",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Nepodpísané bajty transakcií",
   "up_to_date_peers": "Aktuálni peeri",
   "update": "Aktualizácia",
   "update_account_info": "Aktualizovať informácie o účte",
   "update_alias": "Aktualizovať Alias",
-  "update_available": "Nová verzia BRS je k dispozícii. Odporúča sa, aby ste aktualizovali.",
+  "update_available": "K dispozícii je nová aktualizácia",
   "update_beta_available": "Nová experimentálna verzia je k dispozícii. Neodporúča sa aby ste si to nainštalovali, pokiaľ neviete, čo robíte.",
   "update_blockchain_downloading": "Blockchain sa stále sťahuje, skontrolujte znova keď už bude aktuálny.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Aktualizovať kontakt",
   "update_multiple_available": "K dispozícii sú hlavná aj experimentálna verzia. Neodporúča sa inštalovať experimentálnu verziu, ak neviete, čo robíte.",
   "update_testnet": "BRS sa nedá aktualizovať, ak je zároveň pripojený na testnet.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Tento používateľ nemá žiadny majetok.",
   "user_no_transactions": "Tento používateľ nemá žiadne transakcie.",
   "valid": "Platné",
+  "valid_thru": "Platné do",
   "validate": "Overiť",
   "validate_token": "Overiť Token",
   "value_in_burst": "Hodnota v BURST",
+  "verified_source": "Overený a bezpečný zdroj",
+  "verify": "Verify",
   "version": "Verzia",
   "view_more": "Zobraziť viac",
   "view_owner_info_q": "Zobraziť informácie o vlastníkovi?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Ponúkate tento alias na predaj.",
   "your_name": "Vaše Meno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
