--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -55,6 +55,7 @@
   "answers": "Cevaplar",
   "application": "Uygulama",
   "arbitrary_message": "Rasgele Mesaj",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "",
   "ask_order_cancellation": "Sipariş iptali isteyin",
   "ask_order_id": "Sipariş ID sor",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Kendi şifrenizi oluşturmak için tıklayın.",
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
+  "click_for_changes": "Neyin değiştiğini görmek için buraya tıklayın",
   "click_here_for_help": "Daha fazla bilgi edinmek için buraya tıklayın.",
   "click_here_to_enable": "Etkinleştirmek için tıklatın.",
   "click_to_claim": "Ücretsiz Çekiminizi talep etmek için buraya tıklayın.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Varlık bağlantısını kopyala",
   "copy_send_burst_link": "'burst Gönder' bağlantısını kopyala",
   "copy_send_message_link": "'Mesaj Gönder' bağlantısını kopyala",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Anket Oluştur",
   "create_your_account": "Hesap Oluştur",
   "current_price": "Güncel Fiyat",
   "current_quantity": "Mevcut miktar",
+  "current_version": "Şimdiki versiyonu",
   "dashboard": "Başlangıç",
   "data": "Veriler",
   "data_is_encrypted": "Veriler şifrelenmiştir.",
@@ -202,11 +206,14 @@
   "discount": "İndirim",
   "do_not_broadcast": "Yayınlama",
   "do_not_delete": "Hayır, silme",
-  "download_brs": "Download BRS",
+  "domain": "domain",
+  "download": "İndir",
+  "download_started": "",
   "downloaded": "İndirilenler",
   "downloaded_hash": "İndirilen Hash",
   "downloaded_volume": "İndirilen Hacim",
   "downloading_blockchain": "İndirilen Blockchain",
+  "downloading_update": "Güncelleme indiriliyor. Tamamlandığında size bilgi verilir.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
   "edit": "Düzenle",
   "effective_balance": "Effective bakiye",
@@ -454,6 +461,7 @@
   "generation_signature": "Generation Signature",
   "generator": "Generator",
   "generator_public_key": "Generator Public Key",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Give Feedback",
   "give_feedback_q": "Geri bildirim ver?",
   "goods": "Varlıklar",
@@ -486,6 +494,7 @@
   "is_scanning": "Is Scanning",
   "issue_asset": "Issue Asset",
   "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issuer": "İhraççı",
   "item_name": "Item Name",
   "language": "Language",
   "last_block": "Son Blok",
@@ -554,6 +563,10 @@
   "new_price": "Yeni fiyat",
   "new_q_create_account": "Yeni misin ? Hesabınızı oluşturun !",
   "new_quantity": "Yeni miktar",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Yeni sürüm",
   "newest_products": "Newest Products",
   "news": "Haberler",
   "news_section_disabled": "Haber bölümü şu anda devre dışı.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
+  "non_verified_source": "Bilinmeyen, potansiyel olarak güvensiz kaynak",
   "none": "None",
   "not_delivered_in_time": "Zamanında teslim edilemedi",
   "not_forging": "Not Forging",
@@ -620,6 +634,7 @@
   "open_orders": "Açık Siparişler",
   "option_x": "option __x__",
   "options_are_binary": "Options are Binary",
+  "or": "or",
   "order": "Sipariş",
   "order_date": "Sipariş Tarihi",
   "order_description": "Sipariş açıklaması",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
   "refund": "Geri ödeme",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Onaylanmamış işlemler",
   "unconfirmed_transactions": "Unconfirmed Transactions",
   "unknown": "Bilinmeyen",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "İmzalanmamış işlem bayt",
   "up_to_date_peers": "Güncel eş",
   "update": "Güncelleme",
   "update_account_info": "Hesap bilgilerini güncelleme",
   "update_alias": "Rumuz güncelleme",
-  "update_available": "Yeni bir BRS sürümü mevcuttur. Sürümü güncelleştirmeniz önerilir.",
+  "update_available": "Yeni güncelleme mevcut",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Kişi Güncelleştir",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
@@ -888,9 +907,12 @@
   "user_no_assets": "This user has no assets.",
   "user_no_transactions": "This user has no transactions.",
   "valid": "Valid",
+  "valid_thru": "Geçmişten geçerli",
   "validate": "Validate",
   "validate_token": "Validate Token",
   "value_in_burst": "Value in BURST",
+  "verified_source": "Doğrulanmış ve güvenli kaynak",
+  "verify": "Verify",
   "version": "Versiyon",
   "view_more": "View More",
   "view_owner_info_q": "View owner info?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Bu rumuzu satışa sunuyorsunuz.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
