--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -55,6 +55,7 @@
   "answers": "Відповіді",
   "application": "Додаток",
   "arbitrary_message": "Довільні повідомлення",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Заявка на Продаж",
   "ask_order_cancellation": "Відмінити ордер на купівлю",
   "ask_order_id": "ID ордера на купівлю",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Хочете вибрати свій власний пароль? Натисніть тут.",
   "clear_results": "Очистити результати",
   "clear_search_results": "Очистка результатів пошуку",
+  "click_for_changes": "Натисніть тут, щоб побачити, що змінилося",
   "click_here_for_help": "Натисніть тут, щоб дізнатися більше про це",
   "click_here_to_enable": "Натисніть тут, щоб ввімкнути.",
   "click_to_claim": "Натисніть тут, щоб одержати безкоштовний Burst.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Скопіювати посилання активу",
   "copy_send_burst_link": "Скопіювати посилання 'Відправити BURST'",
   "copy_send_message_link": "Скопіювати посилання \"Відправити повідомлення",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Створити опитування",
   "create_your_account": "Створення аккаунта",
   "current_price": "Поточна ціна",
   "current_quantity": "Поточна кількість",
+  "current_version": "Поточна версія",
   "dashboard": "Панель",
   "data": "Дані",
   "data_is_encrypted": "Дані зашифровані.",
@@ -202,11 +206,14 @@
   "discount": "Знижка",
   "do_not_broadcast": "Не транслювати",
   "do_not_delete": "Ні, не видаляти",
-  "download_brs": "Завантажити BRS",
+  "domain": "Домен",
+  "download": "Завантажити",
+  "download_started": "",
   "downloaded": "Завантажено",
   "downloaded_hash": "Звантаженій хеш",
   "downloaded_volume": "Завантажений Об'єм",
   "downloading_blockchain": "Завантаження Blockchain",
+  "downloading_update": "Оновлення завантажується. Ви будете проінформовані після завершення.",
   "drop_update": "Перетягніть сюди викачаний клієнт(zip файл) або натисніть для вибору.",
   "edit": "Редагувати",
   "effective_balance": "Ефективний баланс",
@@ -454,6 +461,7 @@
   "generation_signature": "Створення підпису",
   "generator": "Генератор",
   "generator_public_key": "Генератор Відкритого ключа",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Надання відгуку",
   "give_feedback_q": "Додати відгук?",
   "goods": "Товари",
@@ -486,6 +494,7 @@
   "is_scanning": "Сканування",
   "issue_asset": "Випустити Актив",
   "issue_asset_warning": "Попередження: Після того, як ви введете дані, ви не зможете змінити цю інформацію знову. Переконайтеся, що усі дані введені правильно.",
+  "issuer": "Емітент",
   "item_name": "Ім'я елемента",
   "language": "Мова",
   "last_block": "Останній блок",
@@ -554,6 +563,10 @@
   "new_price": "Нові ціни",
   "new_q_create_account": "Уперше? Створіть свій аккаунт!",
   "new_quantity": "Кількість нових",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Нова версія",
   "newest_products": "Новітні продукти",
   "news": "Новини",
   "news_section_disabled": "Розділ новин наразі вимкнуті.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Транзакції не знайдені",
   "no_transactions_in_block": "У цьому блоці немає транзакцій.",
   "no_transactions_yet": "Ще немає транзакцій.",
+  "non_verified_source": "Невідомий, потенційно небезпечний джерело",
   "none": "Не знайдено",
   "not_delivered_in_time": "Не доставлено вчасно",
   "not_forging": "Форжинга нема",
@@ -620,6 +634,7 @@
   "open_orders": "Відкриті замовлення",
   "option_x": "параметр __x__",
   "options_are_binary": "Опціон є Цифровим",
+  "or": "or",
   "order": "Замовлення",
   "order_date": "Дата замовлення",
   "order_description": "Опис ордера",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "Публічний ключ цього рахунку вже анонсовано. Натомість, будь-ласка використайте номер рахунку.",
   "recipient_unknown": "Рахунок одержувача є невідомим аккаунтом, що означає, що він ніколи не мав транзакцій, що входять або витікаючих. Будь ласка, перевірте адресу одержувача перед відправкою.",
   "recipient_unknown_pka": "Рахунок одержувача невідомий, це означає, що в нім немає транзакцій, що ні входять, ні витікаючих. Для відправки цього запиту необхідно також вказати публічний ключ одержувача.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Повний хэш вказаної транзакції",
   "referenced_transaction_hash": "Хэш Пов'язаної Транзакції",
   "refund": "Повернення грошей",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Непідтверджена Транзакція",
   "unconfirmed_transactions": "Непідтверджена Транзакція",
   "unknown": "Невідомо",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Непідписані Байти Транзакції",
   "up_to_date_peers": "Актуальний список вузлів",
   "update": "Оновлення",
   "update_account_info": "Оновити відомості про аккаунт",
   "update_alias": "Оновлення псевдоніму",
-  "update_available": "Доступний новий реліз BRS. Ми рекомендуємо оновити.",
+  "update_available": "Доступне нове оновлення",
   "update_beta_available": "Новий експериментальний випуск доступний. Не рекомендується, встановлювати його, якщо ви не знаєте, що ви робите.",
   "update_blockchain_downloading": "Blockchain ще завантажується, перевірте ще раз після того, як він оновиться.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Оновлення контакту",
   "update_multiple_available": "Доступні як основний, так і експериментальний випуски. Не рекомендується встановлювати експериментальний випуск, якщо ви не знаєте, що ви робите.",
   "update_testnet": "BRS не можна оновити при підключенні до тестової мережі.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Цей користувач не має активів.",
   "user_no_transactions": "У цього користувача немає транзакцій.",
   "valid": "Дійсний",
+  "valid_thru": "Дійсний до",
   "validate": "Перевіряти",
   "validate_token": "Перевірити маркер",
   "value_in_burst": "Значення в BURST",
+  "verified_source": "Перевірений і безпечний джерело",
+  "verify": "Verify",
   "version": "Версія",
   "view_more": "Подивитися більше",
   "view_owner_info_q": "Проглянути інформацію про власника ?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Ви пропонуєте цей псевдонім для продажу.",
   "your_name": "Твоє ім’я",
   "your_passphrase": "Ваша парольна фраза",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
