--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -55,6 +55,7 @@
   "answers": "Resposta",
   "application": "Aplicación",
   "arbitrary_message": "Mensaxe arbitrario",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Orde de venda",
   "ask_order_cancellation": "Cancelar Orde de Venda",
   "ask_order_id": "ID de orde de venda",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "¿Prefire elexila súa propia contrasinal? faga clic aquí.",
   "clear_results": "Clear Results",
   "clear_search_results": "Limpar resultados de búsqueda",
+  "click_for_changes": "Fai clic aquí para ver o que cambiou",
   "click_here_for_help": "Fai clic aquí para saber máis sobre el",
   "click_here_to_enable": "Faga clic aquí para activalo.",
   "click_to_claim": "Fai clic aquí para reclamar a explosión gratuíta.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copialo enlace do activo",
   "copy_send_burst_link": "Copialo enlace 'Enviar BURST'",
   "copy_send_message_link": "Copialo enlace 'Enviar mensaxe'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Cree unha enquisa",
   "create_your_account": "Creala súa conta",
   "current_price": "Prezo actual",
   "current_quantity": "Cantidade actual",
+  "current_version": "Versión actual",
   "dashboard": "Escritorio",
   "data": "Datos",
   "data_is_encrypted": "Data is encrypted.",
@@ -202,11 +206,14 @@
   "discount": "Desconto",
   "do_not_broadcast": "Non transmitir",
   "do_not_delete": "Non, non borrar",
-  "download_brs": "Descarregar BRS",
+  "domain": "Dominio",
+  "download": "Descarga",
+  "download_started": "A descarga comezou",
   "downloaded": "Descarregado",
   "downloaded_hash": "Hash descarregado",
   "downloaded_volume": "Volume descarregado",
   "downloading_blockchain": "Descarregando a cadea de bloques",
+  "downloading_update": "A actualización está a ser descargada. Informaralle unha vez que remate.",
   "drop_update": "Arrastre a actualización do cliente (o arquivo zip) aquí ou faga clic para seleccionar.",
   "edit": "Editar",
   "effective_balance": "Saldo efectivo",
@@ -454,6 +461,7 @@
   "generation_signature": "Firma de xeración",
   "generator": "Xerador",
   "generator_public_key": "Crave pública do xerador",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Deixar valoración",
   "give_feedback_q": "¿Comentar?",
   "goods": "Mercadorías",
@@ -486,6 +494,7 @@
   "is_scanning": "Está Escaneando",
   "issue_asset": "Emitir activo",
   "issue_asset_warning": "Aviso: Unha vez enviada, nunca poderá cambiar esta información. Asegúrese de que é a correcta.",
+  "issuer": "Emisor",
   "item_name": "Nome do artigo",
   "language": "Idioma",
   "last_block": "Derradeiro bloque",
@@ -554,6 +563,10 @@
   "new_price": "Novo prezo",
   "new_q_create_account": "¿Novo? ¡Cree a súa conta!",
   "new_quantity": "Nova cantidade",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nova versión",
   "newest_products": "Artigos máis recentes",
   "news": "Noticias",
   "news_section_disabled": "A sección de noticias está actualmente desactivada.",
@@ -591,6 +604,7 @@
   "no_transactions_found": "Non se atoparon transaccións",
   "no_transactions_in_block": "Ningunha transacción neste bloque.",
   "no_transactions_yet": "Aínda non hai transaccións.",
+  "non_verified_source": "Fonte descoñecida e potencialmente insegura",
   "none": "None",
   "not_delivered_in_time": "Non enviado en tempo",
   "not_forging": "Sen Forxar",
@@ -620,6 +634,7 @@
   "open_orders": "Ordes pendentes",
   "option_x": "opción __x__",
   "options_are_binary": "As opcións son binarias",
+  "or": "or",
   "order": "Orde",
   "order_date": "Data da orde",
   "order_description": "Descripción da orde",
@@ -695,6 +710,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "A conta de destino é descoñecida, o que significa que nunca ten recibido ou emitido ninguna transacción. Por favor confirme a conta de destino antes de facelo envío.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash completo da transacción de referencia",
   "referenced_transaction_hash": "Transacción de Hash referenciada",
   "refund": "Reembolso",
@@ -867,14 +883,17 @@
   "unconfirmed_transaction": "Transacción sen confirmar",
   "unconfirmed_transactions": "Transaccións sen confirmar",
   "unknown": "Descoñecido",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes de transacción sen firmar",
   "up_to_date_peers": "Pares actualizados",
   "update": "Actualizar",
   "update_account_info": "Actualizala información da conta",
   "update_alias": "Actualizar Alias",
-  "update_available": "Unha nova versión do BRS está dispoñible. Recoméndase que actualice.",
+  "update_available": "Nova actualización dispoñible",
   "update_beta_available": "Está dispoñible unha nova versión experimental. Non se recomenda a súa instalación se non sabe ben o que se está facendo.",
   "update_blockchain_downloading": "A cadea de bloques aínda se está descarregando, volva a probar cando esté actualizada.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Actualizar contacto",
   "update_multiple_available": "Hai unha versión xeral e unha experimental dispoñible. Non se recomenda que instale a versión experimental salvo que saiba o que está facendo.",
   "update_testnet": "BRS non pode ser actualizado durante a conexión á red de probas.",
@@ -888,9 +907,12 @@
   "user_no_assets": "Este usuario non ten activos.",
   "user_no_transactions": "Este usuario non ten ningunha transacción.",
   "valid": "Válido",
+  "valid_thru": "Válido a través",
   "validate": "Validar",
   "validate_token": "Validar identificador",
   "value_in_burst": "Valor en BURST",
+  "verified_source": "Fonte verificada e segura",
+  "verify": "Verify",
   "version": "Versión",
   "view_more": "Ver máis",
   "view_owner_info_q": "¿Vela información do propietario?",
@@ -917,17 +939,5 @@
   "your_alias_sale_offer": "Esta poñendo a venta este alias.",
   "your_name": "O seu nome",
   "your_passphrase": "O seu contrasinal",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
